# code-exercise

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt  tox.ini
api/: app.py  commands.py
api/models/: prediction.py
api/services/: prediction.py
api/views/: prediction.py
tests/api/views/: test__prediction.py
